--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
   <meta charset="UTF-8">
   <title>Simple Boilerplate</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 </head>
-<body>
-
+<body ng-controller="AppController">
+<h1>{{ message }}</h1>
 <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
