--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Simple Boilerplate</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+  <link rel="stylesheet" href="app/style.css">
+  <script src="lib/angular/angular.js"></script>
 </head>
 <body ng-controller="AppController">
 <h1>{{ message }}</h1>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="app/app.js"></script>
 </body>
 </html>
