--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 </head>
 <body ng-controller="AppController">
 <h1>{{ message }}</h1>
+<script type="text/javascript" src="app/services.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
 </body>
 </html>
