--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
   <tbody>
     <tr ng-repeat="student in students">
       <td>{{ student.name }}</td>
-      <td ng-repeat="course in courses"></td>
+      <td ng-repeat="course in courses"><span ng-if="studentIsInCourse(student, course)">Y</span></td>
     </tr>
   </tbody>
 </table>
