--- a/client/index.html
+++ b/client/index.html
@@ -11,14 +11,18 @@
 <table>
   <thead>
     <tr>
-      <th></th>
-      <th ng-repeat="course in courses">{{ course.title }}</th>
+      <th class="course-title"></th>
+      <th class="course-title" ng-repeat="course in courses"><div><span>{{ course.title }}</span></div></th>
     </tr>
   </thead>
   <tbody>
     <tr ng-repeat="student in students">
       <td>{{ student.name }}</td>
       <td ng-repeat="course in courses"><span ng-if="studentIsInCourse(student, course)">Y</span></td>
+    </tr>
+    <tr>
+      <th>Total enrollment</th>
+      <th ng-repeat="course in courses">{{ course.enrollment }}</th>
     </tr>
   </tbody>
 </table>
